tests/ui/consts/const-try.stderr
error[E0015]: `?` cannot determine the branch of `TryMe` in constant functions
  --> $DIR/const-try.rs:33:5
   |
LL |     TryMe?;
   |     ^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $DIR/const-try.rs:21:1
   |
LL | impl const Try for TryMe {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: `?` cannot convert from residual of `TryMe` in constant functions
  --> $DIR/const-try.rs:33:5
   |
LL |     TryMe?;
   |     ^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $DIR/const-try.rs:15:1
   |
LL | impl const FromResidual<Error> for TryMe {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
